--- a/Web.Statu/Views/Data/Index.cshtml
+++ b/Web.Statu/Views/Data/Index.cshtml
@@ -54,7 +54,7 @@
             <div class="block-col ">
                 <p>
                     Snadno fulltextově dohledatelná vyjádření politiků, která najdete
-                    <span class="exclusive">exkluzívně pouze na <img style="height:14px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                    <span class="exclusive">exkluzivně pouze na <img style="height:14px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
                 </p>
             </div>
 
@@ -64,7 +64,7 @@
                         <span style="white-space:nowrap">
                             <a href="/data/Index/vyjadreni-politiku" class="tag">Vyjádření 100+ politiků na sociálních sítích</a>
                             <i class="fab fa-facebook-square"></i> <i class="fab fa-twitter-square"></i> <i class="fab fa-youtube"></i>
-                        </span>  <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                        </span>  <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
                         <div class="small" style="padding-left:1em;">
                             @HlidacStatu.Util.RenderData.NiceNumber(HlidacStatu.Lib.Data.External.DataSets.DataSet.CachedDatasets.Get("vyjadreni-politiku")?.NumberOfRecords() ?? 0) statusů,
                             stovky videí převedených do textu.
@@ -95,7 +95,7 @@
                     <li>
                         <span style="white-space:nowrap">
                             <a href="/data/Index/tiskove-konference-vlady" class="tag">Tiskové konference vlády</a>
-                            <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
                         </span>
                         <div class="small" style="padding-left:1em;">
                             Kompletní přepis obsahu tiskových konferecí na úřadu vlády, od 2006 do @(DateTime.Now.Year).
@@ -107,7 +107,7 @@
                     <li>
                         <span style="white-space:nowrap">
                             <a href="/data/Index/vybory-psp" class="tag">Jednání výborů PSP</a>
-                            <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
                         </span>
                         <div class="small" style="padding-left:1em;">
                             Kompletní přepis obsahu parlamentních výborů Poslanecké sněmovny Parlamentu ČR.
@@ -155,7 +155,7 @@
                             <a href="/data/Index/fond-hejtmanky-pokorne-jermanove" class="tag">
                                 Dotace z fondu hejtmanky Pokorné-Jermanové
                             </a>
-                            <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
                         </span>
                         <div class="small" style="padding-left:1em;">
                             Sbírka rozhodnutí Úřadu pro ochranu hospodářské soutěže od roku 1999 v oblastech hospodářské soutěže, veřejných zakázek,
@@ -202,7 +202,7 @@
                         <span style="white-space:nowrap">
                             <a href="/data/Index/narodni-investicni-plan" class="tag">
                                 Národní investiční plán
-                            </a> <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            </a> <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
 
                         </span>
                         <div class="small" style="padding-left:1em;">
@@ -216,7 +216,7 @@
                         <span style="white-space:nowrap">
                             <a href="/data/Index/prijemci-podpory-covid-programu" class="tag">
                                 Příjemci podpory COVID programů
-                            </a> <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            </a> <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
 
                         </span>
                         <div class="small" style="padding-left:1em;">
@@ -229,7 +229,7 @@
                         <span style="white-space:nowrap">
                             <a href="/data/Index/pomoc-covid" class="tag">
                                 Skutečně vydaná pomoc vlády v rámci COVID podpor
-                            </a> <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            </a> <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
 
                         </span>
                         <div class="small" style="padding-left:1em;">
@@ -242,7 +242,7 @@
                         <span style="white-space:nowrap">
                             <a href="/data/Index/ministry-invoices" class="tag">
                                 Faktury ministerstev ČR
-                            </a> <span class="exclusive small">exkluzívně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
+                            </a> <span class="exclusive small">exkluzivně na <img style="height:12px;color:yellow" src="/Content/HlidacLoga/Hlidac-statu-ctverec%20invert%20transparent%20notext.svg" /></span>
 
                         </span>
                         <div class="small" style="padding-left:1em;">
