--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -162,10 +162,9 @@ XINTEXT (0->0.7mld),
             //        + "<meta property=\"og:image:height\" content=\"1080\" />"
             //        + "<meta property=\"og:image:type\" content=\"image/png\" />"
             ;
-            viewCache = "éH";
+            viewCache = "0H";
             break;
         case 99:
-            if Embed
             Layout = null;
 
             break;
