--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -166,6 +166,7 @@ XINTEXT (0->0.7mld),
             break;
         case 99:
             Layout = null;
+            viewCache = "0H";
 
             break;
         default:
